# cpp-template

./: CMakeLists.txt  CMakePresets.json
include/: lexer.hpp  parser.hpp
src/: main.cpp
test/: lexer_test.cpp
